--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,19 @@
             <version>1.4.200</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source> <!-- or the version compatible with Spring -->
+                    <target>17</target> <!-- or the version compatible with Spring -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
